name:                twitter-stream
version:             0.1.0.0
synopsis:            CUI app which streams tweets with specified keyword.
description:         Please see README.md
homepage:            https://github.com/formalism/twitter-stream
license:             BSD3
license-file:        LICENSE
author:              Tomoyuki Ueda
maintainer:          tomoyuki.ueda@gmail.com
copyright:           2016 Tomoyuki Ueda
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable twitter-stream-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , twitter-stream, authenticate-oauth, bytestring, http-conduit,
                       conduit, conduit-extra, http-client, aeson, http-client-tls, text
  default-language:    Haskell2010

test-suite twitter-stream-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , twitter-stream, authenticate-oauth
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/formalism/twitter-stream
